[gd_scene load_steps=16 format=3 uid="uid://26sdep47xssj"]

[ext_resource type="FontFile" uid="uid://e0dk132vrmf8" path="res://assets/Pixel Bug.otf" id="1_c2u1v"]
[ext_resource type="FontFile" uid="uid://cjvrsitv57if3" path="res://assets/Stacked pixel.ttf" id="1_e6vpq"]
[ext_resource type="Script" uid="uid://1lw7cq5qvwch" path="res://scripts/menus/options.gd" id="1_yjkok"]
[ext_resource type="PackedScene" uid="uid://cqa6wvdx22niq" path="res://scenes/menus/options_background.tscn" id="2_kv8mn"]
[ext_resource type="PackedScene" uid="uid://ci3e8foshsdo7" path="res://scenes/menus/confirmation_popup.tscn" id="3_2iy26"]
[ext_resource type="AudioStream" uid="uid://dck7vp50xe2hy" path="res://assets/sounds/music/Tick Tick Haunt.wav" id="3_uon5e"]
[ext_resource type="AudioStream" uid="uid://ba6brkbsjobi4" path="res://assets/sounds/music/Phantom of the Pocket Operator.wav" id="4_85aq5"]
[ext_resource type="PackedScene" uid="uid://bk6j0x0hdlfb6" path="res://scenes/crt.tscn" id="5_1sggn"]
[ext_resource type="Texture2D" uid="uid://cygnqj7n7un41" path="res://assets/UI/icons/music.png" id="7_0un6s"]
[ext_resource type="Texture2D" uid="uid://ud5lox0ovipu" path="res://assets/UI/icons/music_highlight.png" id="8_0un6s"]
[ext_resource type="Texture2D" uid="uid://nbhv7wopd2tq" path="res://assets/UI/icons/music_disabled.png" id="9_kywri"]
[ext_resource type="Texture2D" uid="uid://cldjsj06r5xaw" path="res://assets/UI/icons/sfx.png" id="10_kywri"]
[ext_resource type="Texture2D" uid="uid://bvbw6uvlbx6j8" path="res://assets/UI/icons/sfx_highlight.png" id="11_apvty"]
[ext_resource type="Texture2D" uid="uid://dqi42jitgwajx" path="res://assets/UI/icons/sfx_disabled.png" id="12_vhp3b"]

[sub_resource type="Theme" id="Theme_o7i7e"]
default_font = ExtResource("1_e6vpq")
default_font_size = 32

[node name="Options" type="Control"]
z_index = 100
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o7i7e")
script = ExtResource("1_yjkok")
options_music = ExtResource("3_uon5e")
controls_music = ExtResource("4_85aq5")

[node name="OptionsBackground" parent="." instance=ExtResource("2_kv8mn")]
layer = 1
offset = Vector2(0, 400)
scale = Vector2(2.5, 2.5)
transform = Transform2D(2.5, 0, 0, 2.5, 0, 400)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(1280, 800)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -400.0
offset_right = 640.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.43137255)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
z_index = 20
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TitleLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 64
text = "OPTIONS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="AudioSection" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="CanvasLayer/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 48
text = "AUDIO"
horizontal_alignment = 1

[node name="MusicControl" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/AudioSection"]
layout_mode = 2
alignment = 1

[node name="MusicLabel" type="Label" parent="CanvasLayer/VBoxContainer/AudioSection/MusicControl"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 24
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/AudioSection/MusicControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
theme_override_icons/grabber = ExtResource("7_0un6s")
theme_override_icons/grabber_highlight = ExtResource("8_0un6s")
theme_override_icons/grabber_disabled = ExtResource("9_kywri")
value = 80.0

[node name="MusicValueLabel" type="Label" parent="CanvasLayer/VBoxContainer/AudioSection/MusicControl"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 10
text = "80%"

[node name="SFXControl" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/AudioSection"]
layout_mode = 2
alignment = 1

[node name="SFXLabel" type="Label" parent="CanvasLayer/VBoxContainer/AudioSection/SFXControl"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 24
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/AudioSection/SFXControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
theme_override_icons/grabber = ExtResource("10_kywri")
theme_override_icons/grabber_highlight = ExtResource("11_apvty")
theme_override_icons/grabber_disabled = ExtResource("12_vhp3b")
value = 80.0

[node name="SFXValueLabel" type="Label" parent="CanvasLayer/VBoxContainer/AudioSection/SFXControl"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 10
text = "80%"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SaveSection" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ResetSaveButton" type="Button" parent="CanvasLayer/VBoxContainer/SaveSection"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Resets high scores and progress"
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 32
text = "Reset Save"

[node name="ReplayTutorialButton" type="Button" parent="CanvasLayer/VBoxContainer/SaveSection"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Show tutorial again on next play"
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 32
text = "Replay Tutorial"

[node name="ResetAllButton" type="Button" parent="CanvasLayer/VBoxContainer/SaveSection"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Show tutorial again on next play"
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 32
text = "Reset to Defaults"

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ControlsSection" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ControlsLabel" type="Label" parent="CanvasLayer/VBoxContainer/ControlsSection"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 48
text = "CONTROLS"
horizontal_alignment = 1

[node name="ControlsButton" type="Button" parent="CanvasLayer/VBoxContainer/ControlsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 32
text = "Edit Controls"

[node name="HSeparator4" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BackButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_c2u1v")
theme_override_font_sizes/font_size = 48
text = "Go Back"

[node name="Camera2D" type="Camera2D" parent="CanvasLayer"]
position = Vector2(-350, -465)
offset = Vector2(350, 465)
anchor_mode = 0

[node name="CRT" parent="CanvasLayer/Camera2D" instance=ExtResource("5_1sggn")]
offset_left = 325.0
offset_top = 420.0
offset_right = 1525.0
offset_bottom = 1220.0
scale = Vector2(1.1, 1.1)

[node name="Confirmation Popup" parent="CanvasLayer" instance=ExtResource("3_2iy26")]
unique_name_in_owner = true
visible = false
